# SentinelID

./: .env.example  .gitignore  ADMIN_DASHBOARD.md  CHANGELOG.md  CHANGELOG_v0.5.md  CHANGELOG_v0.6.md  DEPLOYMENT.md  LICENSE  Makefile  PHASE2_MERGE_INSTRUCTIONS.md  PHASE2_QUICK_START.md  PHASE3_COMPLETION_STATUS.md  PHASE3_FINAL_STATUS.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_QUICK_START.md  PHASE3_SMOKE_TEST.md  PHASE3_TESTING_GUIDE.md  README.md  RUNBOOK.md  docker-compose.yml  run-phase3-tests.sh
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/edge/: pyproject.toml  pytest.ini
apps/edge/sentinelid_edge/: main.py
apps/edge/sentinelid_edge/api/: router.py
apps/edge/sentinelid_edge/api/v1/: admin.py  auth.py  diagnostics.py  enroll.py  health.py  settings.py
apps/edge/sentinelid_edge/core/: auth.py  config.py  logging.py  request_context.py
apps/edge/sentinelid_edge/domain/: models.py  policy.py  reasons.py
apps/edge/sentinelid_edge/services/antifraud/: heuristics.py  risk.py
apps/edge/sentinelid_edge/services/enrollment/: __init__.py  sessions.py
apps/edge/tests/: conftest.py  test_audit_log.py  test_auth_frame_limits.py  test_delete_identity.py  test_encryption.py  test_import_smoke.py  test_keychain_storage.py  test_liveness.py  test_localhost_guard.py  test_outbox.py  test_phase12_enrollment_policy.py  test_phase12_fallback_behavior.py  test_phase7_policy_thresholds.py  test_phase7_risk_heuristics.py  test_phase7_stepup_state_machine.py  test_phase8_enroll_sessions.py  test_phase8_policy_precedence.py  test_phase8_quality_gates.py  test_phase8_similarity_utils.py  test_phase9_hardening.py  test_policy.py  test_rate_limit.py  test_request_id_headers.py  test_telemetry.py  test_telemetry_preflight_cmd.py  test_telemetry_startup_preflight.py  test_telemetry_tls.py  test_telemetry_transport.py  test_template_repo.py
docs/: DEMO_CHECKLIST.md  KEY_MANAGEMENT.md  (+11 more)
(+161 files in other folders)
